# snow

./: AGENTS.md  Cargo.toml  DESIGN-nat-worker.md  PLAN-wasm-networking.md
.cargo/: config.toml
.github/workflows/: im.yml
core/: Cargo.toml
core/src/emulator/: comm.rs  mod.rs
core/src/mac/: localtalk_bridge.rs  mod.rs  serial_bridge.rs  serial_bridge_emscripten.rs
core/src/mac/scsi/: cdrom.rs  controller.rs  disk.rs  disk_image.rs  ethernet.rs  target.rs  toolbox.rs
core/src/mac/swim/: dcd.rs  iwm.rs  mod.rs
docs/: HD20-EMULATION.md  HD20-FEASIBILITY.md
frontend_egui/src/: app.rs  emulator.rs
frontend_egui/src/dialogs/: diskimage.rs
frontend_im/: Cargo.toml
frontend_im/src/: audio.rs  cdrom.rs  clipboard.rs  disk.rs  exports.js  floppy.rs  floppy_manager.rs  framebuffer.rs  input.rs  main.rs  memory.rs  network.rs  removable_media.rs
frontend_im/src/js_api/: audio.rs  clipboard.rs  disks.rs  exports.js  input.rs  mod.rs  network.rs  runtime.rs  video.rs
