[package]
name = "snow_frontend_im"
version = "1.2.0"
edition = "2021"

[[bin]]
name = "snow"
path = "src/main.rs"

[dependencies]
snow_core = { path = "../core" }
snow_floppy = { path = "../floppy" }
crossbeam-channel = "0.5.15"
log = "0.4"
env_logger = "0.11"
pico-args = "0.5"
anyhow = "1.0"

[lints]
workspace = true
